add show transfer info

--- a/src/app/savings/savings-account-view/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/savings/savings-account-view/transactions/view-transaction/view-transaction.component.html
@@ -1,78 +1,108 @@
-<div fxLayoutAlign="end" class="container m-b-20" fxLayoutGap="2%"
-  *ngIf="!(transactionData.interestedPostedAsOn === false && (transactionData.transactionType.id === 17 || transactionData.transactionType.id === 3))">
+<div
+  fxLayoutAlign="end"
+  class="container m-b-20"
+  fxLayoutGap="2%"
+  *ngIf="
+    !(
+      transactionData.interestedPostedAsOn === false &&
+      (transactionData.transactionType.id === 17 || transactionData.transactionType.id === 3)
+    )
+  "
+>
   <span *midasHasPermission="'ADJUSTTRANSACTION_SAVINGSACCOUNT'">
-    <button mat-raised-button color="primary"
-      *ngIf="transactionData.transactionType.value == 'Transfer' || transactionData.reversed == 'true'
-        || transactionData.transactionType.id==3 || transactionData.transactionType.id==17"
-      [routerLink]="'edit'">
+    <button
+      mat-raised-button
+      color="primary"
+      *ngIf="
+        transactionData.transactionType.value == 'Transfer' ||
+        transactionData.reversed == 'true' ||
+        transactionData.transactionType.id == 3 ||
+        transactionData.transactionType.id == 17
+      "
+      [routerLink]="'edit'"
+    >
       <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;Edit
     </button>
   </span>
-  <button mat-raised-button color="warn"
-    *midasHasPermission="'POS_UPDATE'"
-    (click)="undoTransaction()">
+  <button mat-raised-button color="warn" *midasHasPermission="'ALL_FUNCTIONS'" (click)="undoTransaction()">
     <fa-icon icon="undo"></fa-icon>&nbsp;&nbsp;Undo
   </button>
 </div>
 
 <div class="container">
-
-  <mat-card>
-
+  <mat-card
+    *ngIf="
+      transactionData.paymentDetailData &&
+      transactionData.paymentDetailData.checkNumber &&
+      transactionData.paymentDetailData.clientInfo
+    "
+  >
     <mat-card-content>
-
       <div fxLayout="row wrap" class="content">
-
-        <div fxFlex="50%" class="mat-body-strong">
-          Transaction Id
-        </div>
+        <ng-container>
+          <div *ngIf="transactionData.paymentDetailData.checkNumber" fxFlex="50%" class="mat-body-strong">
+            Thông tin giao dịch
+          </div>
+          <div fxFlex="50%">
+            {{ transactionData.paymentDetailData.checkNumber }}
+          </div>
+          <div fxFlex="50%" class="mat-body-strong">Người {{ getTxnType() }}</div>
+          <div fxFlex="50%">
+            {{ transactionData.paymentDetailData.clientInfo.displayName }}
+          </div>
+          <div fxFlex="50%" class="mat-body-strong">Mã định danh</div>
+          <div fxFlex="50%">
+            {{ transactionData.paymentDetailData.clientInfo.externalId }}
+          </div>
+          <div fxFlex="50%" class="mat-body-strong">Tài khoản {{ getTxnType() }}</div>
+          <div fxFlex="50%">
+            {{ transactionData.paymentDetailData.clientInfo.accountNo }}
+          </div>
+        </ng-container>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <br />
+  <mat-card>
+    <mat-card-content>
+      <div fxLayout="row wrap" class="content">
+        <div fxFlex="50%" class="mat-body-strong">Transaction Id</div>
 
         <div fxFlex="50%">
           {{ transactionData.id }}
         </div>
 
-        <div fxFlex="50%" class="mat-body-strong">
-          Type
-        </div>
+        <div fxFlex="50%" class="mat-body-strong">Type</div>
 
         <div fxFlex="50%">
           {{ transactionData.transactionType.value }}
         </div>
 
-        <div fxFlex="50%" class="mat-body-strong">
-          Transaction Date
-        </div>
+        <div fxFlex="50%" class="mat-body-strong">Transaction Date</div>
 
         <div fxFlex="50%">
           {{ transactionData.date | date }}
         </div>
 
-        <div fxFlex="50%" class="mat-body-strong">
-          Currency
-        </div>
+        <div fxFlex="50%" class="mat-body-strong">Currency</div>
 
         <div fxFlex="50%">
           {{ transactionData.currency.displayLabel }}
         </div>
 
-        <div fxFlex="50%" class="mat-body-strong">
-          Amount
-        </div>
+        <div fxFlex="50%" class="mat-body-strong">Amount</div>
 
         <div fxFlex="50%">
           {{ transactionData.amount | money }}
         </div>
 
-        <div fxFlex="50%" class="mat-body-strong">
-          Note
-        </div>
+        <div fxFlex="50%" class="mat-body-strong">Note</div>
 
         <div fxFlex="50%">
           {{ transactionData.note }}
         </div>
 
         <ng-container *ngIf="transactionData.paymentDetailData">
-
           <div *ngIf="transactionData.paymentDetailData.paymentType" fxFlex="50%" class="mat-body-strong">
             Payment Type
           </div>
@@ -87,14 +117,6 @@
 
           <div *ngIf="transactionData.paymentDetailData.accountNumber" fxFlex="50%">
             {{ transactionData.paymentDetailData.accountNumber }}
-          </div>
-
-          <div *ngIf="transactionData.paymentDetailData.checkNumber" fxFlex="50%" class="mat-body-strong">
-            Cheque Number
-          </div>
-
-          <div *ngIf="transactionData.paymentDetailData.checkNumber" fxFlex="50%">
-            {{ transactionData.paymentDetailData.checkNumber }}
           </div>
 
           <div *ngIf="transactionData.paymentDetailData.routingCode" fxFlex="50%" class="mat-body-strong">
@@ -113,20 +135,13 @@
             {{ transactionData.paymentDetailData.receiptNumber }}
           </div>
 
-          <div *ngIf="transactionData.paymentDetailData.bankNumber" fxFlex="50%" class="mat-body-strong">
-            Bank No.
-          </div>
+          <div *ngIf="transactionData.paymentDetailData.bankNumber" fxFlex="50%" class="mat-body-strong">Bank No.</div>
 
           <div *ngIf="transactionData.paymentDetailData.bankNumber" fxFlex="50%">
             {{ transactionData.paymentDetailData.bankNumber }}
           </div>
-
         </ng-container>
-
       </div>
-
     </mat-card-content>
-
   </mat-card>
-
 </div>
