--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
@@ -76,7 +76,6 @@
                 [matDatepicker]="transactionDatePicker"
                 [(ngModel)]="booking.txnDate"
                 (dateChange)="calculateTotalBookingAmount(i)"
-
               />
               <mat-datepicker-toggle
                 [disabled]="booking.trnRefNo"
@@ -122,7 +121,10 @@
 
         <ng-container matColumnDef="getAmount">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Đã thu hồi</th>
-          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking">{{ booking?.totalGet | money }}</td>
+          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking">
+            {{ booking?.totalGet | money }} <br />
+            <label style="color: blue" for="">({{ displayTerminalName(booking.terminalId) }})</label>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="actions" style="width: 25px">
@@ -132,15 +134,6 @@
             </button>
           </th>
           <td mat-cell *matCellDef="let transaction">
-            <!-- <mat-icon
-              *ngIf="permitFee && (transaction.totalPaid < transaction.bookingAmount)  "
-              style="color: red"
-              title="Chi tiền"
-              mat-dialog-close
-              (click)="
-                addFeeDialogByTransactionId(false, transaction.rollTermId, transaction.bookingAmount, transaction.refid)
-              "
-            > -->
             <mat-icon
               *ngIf="permitFee && transaction.totalPaid < transaction.bookingAmount"
               style="color: red"
@@ -166,28 +159,6 @@
               "
               >gavel
             </mat-icon>
-            <!-- <mat-icon
-              mat-dialog-close
-              style="color: blue"
-              title="Làm giao dịch thu hồi Advance"
-              (click)="
-                routeToMakeRollTermGetCash(
-                  transaction.rollTermId,
-                  transaction.refid,
-                  transactionInfo.totalAmountPaid - transactionInfo.totalAmountGet
-                )
-              "
-              >gavel
-            </mat-icon> -->
-
-            <!-- <mat-icon
-              mat-dialog-close
-              style="color: green;"
-              title="Thực hiện thu tiền phí "
-              (click)="addFeeDialogByTransactionId(true,transaction.trnRefNo)"
-            >
-              attach_money
-            </mat-icon> -->
           </td>
         </ng-container>
         <ng-container matColumnDef="expandedDetail">
