--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -56,17 +56,15 @@
 
     <mat-form-field fxFlex="20%">
       <mat-label>Ngân hàng</mat-label>
-      <input
-        type="text"
-        placeholder="Chọn ngân hàng"
-        matInput
-        (click)="resetAutoCompleteBank()"
-        formControlName="bankFilter"
-        [matAutocomplete]="auto"
-      />
+      <input type="text"
+             placeholder="Chọn ngân hàng"
+             matInput
+             (click)="resetAutoCompleteBank()"
+             formControlName="bankFilter"
+             [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayBank">
-        <mat-option *ngFor="let bank of filteredBankOptions | async" [value]="bank">
-          {{ displayBank(bank) }}
+        <mat-option *ngFor="let bank of filteredBankOptions  | async" [value]="bank" >
+          {{displayBank(bank)}}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
@@ -112,23 +110,18 @@
       </select>
     </mat-form-field>
 
-    <mat-form-field fxFlex="20%">
+    <mat-form-field fxFlex="20%" >
       <select matSelect matNativeControl formControlName="isCheckedFilter">
         <option *ngFor="let status of CheckedFilterOption" [value]="status.code">
           {{ status.description }}
         </option>
       </select>
+
     </mat-form-field>
 
-    <div
-      *ngIf="formFilter.value.isCheckedFilter == 2"
-      fxFlex="10%"
-      fxLayout="row wrap"
-      fxLayoutGap="2%"
-      fxLayout.lt-md="column"
-    >
+    <div *ngIf="formFilter.value.isCheckedFilter == 2 " fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <label for=""></label>
-      <input matInput type="text" formControlName="checkedByUserName" placeholder="Lọc nhân viên chọn" />
+      <input  matInput type="text" formControlName="checkedByUserName" placeholder="Lọc nhân viên chọn" />
     </div>
 
     <div fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
@@ -139,6 +132,7 @@
       <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewOverPaidTransaction" class="margin-v">
         Đã thu hồi lố
       </mat-checkbox>
+
     </div>
   </div>
 
@@ -168,25 +162,18 @@
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
               transactionsData?.totalRollTermAnalyticsRespone?.totalPrincipal -
-                transactionsData?.totalRollTermAnalyticsRespone?.totalFeePaid -
-                transactionsData?.totalRollTermAnalyticsRespone?.totalAmountCancel  | money
+                transactionsData?.totalRollTermAnalyticsRespone?.totalFeePaid | money
             }}</span>
             <span>&nbsp; Tổng công nợ còn lại</span>
           </div>
         </div>
-
         <div fxLayout="row wrap" fxFlex="16%" class="container m-b-20">
           <img src="assets/images/icons/pnlAmount.svg" />
           <div style="display: flex" fxLayout="column">
-            <span >{{
-              transactionsData?.totalRollTermAnalyticsRespone?.totalAmountTransaction  -
-              transactionsData?.totalRollTermAnalyticsRespone?.totalAmountCancel | money
+            <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
+              transactionsData?.totalRollTermAnalyticsRespone?.totalAmountTransaction | money
             }}</span>
             <span> &nbsp;Tổng đã thu hồi</span>
-            <span style="font-size: 16px; padding-top: 5px">{{
-              transactionsData?.totalRollTermAnalyticsRespone?.totalAmountCancel | money
-            }}</span>
-            <span> &nbsp;Tổng đã huỷ</span>
           </div>
         </div>
         <div fxLayout="row wrap" fxFlex="16%" class="container m-b-20">
@@ -194,8 +181,7 @@
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
               transactionsData?.totalRollTermAnalyticsRespone?.totalFeePaid -
-                ( transactionsData?.totalRollTermAnalyticsRespone?.totalAmountTransaction -
-                transactionsData?.totalRollTermAnalyticsRespone?.totalAmountCancel ) | money
+                transactionsData?.totalRollTermAnalyticsRespone?.totalAmountTransaction | money
             }}</span>
             <span> &nbsp;Tổng cần thu hồi</span>
           </div>
@@ -283,12 +269,7 @@
           </label>
           <br />
           <label style="color: green" for="">
-            {{
-              (journalEntry?.feeAmount
-                ? journalEntry?.feeAmount
-                : ((journalEntry?.feePercentage / 100) * journalEntry?.reqAmount).toFixed(0)
-              ) | money
-            }}
+            {{ (journalEntry?.feeAmount ? journalEntry?.feeAmount : ((journalEntry?.feePercentage / 100) * journalEntry?.reqAmount).toFixed(0)) | money }}
           </label>
         </td>
       </ng-container>
@@ -309,7 +290,7 @@
           (c) = (a) - (b)
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry?.principal - journalEntry?.paidAmount - journalEntry?.amountCancel | money }}
+          {{ journalEntry?.principal - journalEntry?.paidAmount | money }}
         </td>
       </ng-container>
 
@@ -319,14 +300,9 @@
           (d)
         </th>
         <td class="on_success" mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry?.amountPaid - journalEntry?.amountCancel  | money }} <br />
+          {{ journalEntry.amountPaid | money }} <br />
+          <label style="color: red;" *ngIf="journalEntry.amountPaid > journalEntry.principal" for="">(Thu hồi lố: {{(journalEntry.amountPaid - journalEntry.principal) | money}})</label>
 
-          <label style="color: red" *ngIf="journalEntry.amountCancel" for=""
-            >(Đã huỷ: {{ journalEntry.amountCancel  | money }})</label
-          >
-          <label style="color: red" *ngIf="journalEntry.amountPaid > journalEntry.principal" for=""
-            >(Thu hồi lố: {{ journalEntry?.amountPaid - journalEntry?.principal | money }})</label
-          >
         </td>
       </ng-container>
 
@@ -336,7 +312,7 @@
           (e) = (b) - (d)
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry" class="on_hold">
-          {{ journalEntry?.paidAmount - (journalEntry?.amountPaid - journalEntry?.amountCancel) | money }}
+          {{ journalEntry.paidAmount - journalEntry.amountPaid | money }}
         </td>
       </ng-container>
 
@@ -409,17 +385,13 @@
                 <span style="font-weight: bold">
                   Đã thu hồi <br />
                   (d) :</span
-                >
-                / <br />
-                <span style="font-weight: bold"> Đã huỷ</span>
-                {{ element?.amountPaid | money }} <br />
-                {{ element?.amountCancel | money }}
+                >&nbsp; &nbsp;{{ element?.amountPaid | money }}
               </div>
               <div>
                 <span style="font-weight: bold">
                   Cần thu hồi <br />
                   (e)=(b) - (d) :</span
-                >&nbsp; &nbsp;{{ element.paidAmount - element.amountPaid | money }}
+                >&nbsp; &nbsp;{{ (element.paidAmount - element.amountPaid) | money }}
               </div>
             </div>
           </div>
